plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}
ext {
    querydslVersion = '5.0.0' 
    springSecurityVersion = '6.3.1'
    springVersion = '6.1.9'
}

group = 'fib'
version = '0.0.1-SNAPSHOT'

group 'fib'
version '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'fib.br10.Br10Application'
        )
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
//    mavenLocal()
    mavenCentral()
    mavenLocal()
}

dependencies {
    //Spring
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'

    //Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    //MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

    //Logging
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'

    //QueryDSL
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    //Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.1'


    //Cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.1'


    //Reactive
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.3.1'

    //MongoDB
//    implementation 'org.springframework.data:spring-data-mongodb:4.3.2'
//    implementation 'org.mongodb:mongodb-driver-sync:5.1.2'


    //Liquibase
    implementation 'org.liquibase:liquibase-core:4.28.0'


}


tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorPath = configurations.annotationProcessor
}


